<resources>
    <string name="app_name">MusicianManagementApp</string>
    <string name="auth_failed">Błąd logowania</string>
    <string name="currentSong">Bieżąca piosenka</string>
    <string name="logout">Wyloguj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Ładowanie</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_main">Band App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="band_name">Nazwa zespołu</string>
    <string name="title_activity_create_band">Utwórz zespół</string>
    <string name="choose_band">Wybierz zespół</string>
    <string name="join_band">Dołącz do zespołu</string>
    <string name="ic_join_band">Dołącz do zespołu</string>
    <string name="ic_join_band_request">Prośby o dołączenie</string>
    <string name="confirm_join_band">Zatwierdź dołączenie</string>
    <string name="reject_join_band">Odrzuć</string>
    <string name="accept_join_band">Akceptuj</string>
    <string name="addSong">Dodaj Piosenkę</string>
    <string name="author">Autor</string>
    <string name="title">Tytuł</string>
    <string name="ic_choose_current_song">Wybierz piosenkę</string>
    <string name="current_song_not_set">Nie ustawiono bieżącej piosenki</string>
    <string name="key">key</string>
    <string name="selectBand">Wybierz zespół</string>
    <string name="newSongWasSelected">Wybrano nową piosenkę</string>
    <string name="INTENT_LOGED_IN_USER_INFO">USER_INFO</string>
    <string name="BUNDLE_MAIN_ACTIVITY_SELECTED_BAND">MainActivity#selectedBand</string>
    <string name="BUNDLE_MAIN_ACTIVITY_USER_INFO">MainActivity#userInfo</string>
    <string name="waitForBandMasterAccept">Czekaj na akceptację Mastera zespołu</string>
</resources>
